fixed background image not showing in vercel deployment

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -473,9 +473,8 @@ color: inherit;
 .bg-engagement-7 {
   background-image: url("/assets/ADP_1855.jpg");
   background-repeat: no-repeat;
-  background-attachment: local;
-  background-size: contain;
-  background-position: 0px -300px;
+  background-attachment: fixed;
+  background-size: cover;
 }
 
 /* .bg-engagement-8 {
